# philter-ucsf-ChatGPT

./: MANIFEST.in  README.md  READTHIS.md  config.yaml  pyproject.toml  requirements.txt
config/: default_filters.json
configs/: default.yml
philter_ucsf/: philter.py
philterx/: __init__.py  cli.py  config.py  config.yaml
tests/: test_cli_philter_opts.py  test_patterns_compile.py
