[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "philter_ucsf"
version = "1.0.0"
description = "An open-source PHI-filtering software"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Beau Norgeot", email = "beaunorgeot@gmail.com"}
]
dependencies = [
  "chardet>=3.0.4",
  "nltk>=3.6.6",
  "numpy>=1.22.0",
  "pandas>=1.0.5",
  "xmltodict>=0.12.0",
  "pyyaml>=6.0",
]

[project.scripts]
philterx = "philterx.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.data-files]
config = ["config/default_filters.json"]
"resources" = [
  "resources/blacklists/firstnames_minus_fps.json",
  "resources/whitelists/whitelist_plus_fps_091718_nonames.json",
  "resources/regex/age/age_x.txt",
  "resources/regex_context/initials.txt"
]
